face alignment crossbrowser fix

--- a/app/_scss/_backgrounds.scss
+++ b/app/_scss/_backgrounds.scss
@@ -1,18 +1,18 @@
-.background-img {
-    position: absolute;
-    height: 110%;
-    width: 110%;
-    top: -5%;
-    left: -5%;
+.face-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .face {
+    width: 10vw;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: 10vw;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: -.4%;
     z-index: -1;
+    position: relative;
   }
-
-#home {
-  background-image: url("../img/test3.png");
-  background-repeat: no-repeat;
-  background-position: 49.5% 50%;
-  background-size: 11vw;
 }
